--- a/terms.html
+++ b/terms.html
@@ -9,85 +9,85 @@
 </head>
 <body>
 
-  <div style="margin-top:80px; max-width: 400px; margin-left: auto; margin-right: auto; text-align: center;">
-    <h2>Terms & Conditions</h2>
-    <p>Effective date: Sept. 29, 2025</p>
+  <div style="margin-top:80px; margin-left: auto; margin-right: auto; text-align: center;">
+    <h1>Terms & Conditions</h1>
+    <p>Effective date: Sept. 29, 2025</p><br>
     <p>
-    Welcome to PedalPlex! Please read these Terms & Conditions carefully before using the app. 
+    Welcome to PedalPlex! Please read these Terms & Conditions carefully before using the app.<br>
     By using our services, you agree to these terms.
-    </p>
+    </p><br><br>
 
     <h3>1. Your Account</h3>
     <p>
-    To use our app fully, you may need to create an account.
-    You are responsible for keeping your login credentials safe and secure.
-    You agree to provide accurate, current, and complete information when creating your account.
+    To use our app fully, you may need to create an account.<br>
+    You are responsible for keeping your login credentials safe and secure.<br>
+    You agree to provide accurate, current, and complete information when creating your account.<br>
     You must notify us immediately of any unauthorized use of your account.
-    </p>
+    </p><br><br>
 
     <h3>2. User Content</h3>
     <p>
-    You retain ownership of any content you create within the app, including pedalboards, presets, and related data.
-    By creating or uploading content, you grant PedalPlex a non-exclusive, worldwide, royalty-free license to store, display, and use your content in the app.
-    You agree not to upload content that is illegal, offensive, infringes third-party rights, or violates these Terms.
-    </p>
+    You retain ownership of any content you create within the app, including pedalboards, presets, and related data.<br>
+    By creating or uploading content, you grant PedalPlex a non-exclusive, worldwide, royalty-free license to store, display, and use your content in the app.<br>
+    You agree not to upload content that is illegal, offensive, infringes third-party rights, or violates these Terms.<br>
+    </p><br><br>
 
     <h3>3. Third-Party Brands & Catalog</h3>
     <p>
-    Our catalog includes gear from third-party brands such as Boss, Marshall, TC Electronic, Electro-Harmonix, Ibanez, and others.
-    All trademarks, product names, and images are property of their respective owners.
-    PedalPlex is not affiliated with, endorsed, or sponsored by these brands.
-    Users may not use brand names or logos for commercial purposes without proper authorization.
-    </p>
+    Our catalog includes gear from third-party brands such as Boss, Marshall, TC Electronic, Electro-Harmonix, Ibanez, and others.<br>
+    All trademarks, product names, and images are property of their respective owners.<br>
+    PedalPlex is not affiliated with, endorsed, or sponsored by these brands.<br>
+    Users may not use brand names or logos for commercial purposes without proper authorization.<br>
+    </p><br><br>
 
     <h3>4. Prohibited Conduct</h3>
     <p>
-    You may not:
-    Reverse-engineer, copy, or distribute the app or its catalog.
-    Sell, resell, or commercialize any content from the app without permission.
-    Harm, harass, or interfere with other users.
-    Violate any applicable laws or regulations.
-    </p>
+    You may not:<br>
+    Reverse-engineer, copy, or distribute the app or its catalog.<br>
+    Sell, resell, or commercialize any content from the app without permission.<br>
+    Harm, harass, or interfere with other users.<br>
+    Violate any applicable laws or regulations.<br>
+    </p><br><br>
 
     <h3>5. Disclaimers</h3>
     <p>
-    The app and its catalog are provided “as is” without warranties of any kind, whether express or implied.
-    We do not guarantee that all information in the catalog is accurate, complete, or up-to-date.
-    </p>
+    The app and its catalog are provided “as is” without warranties of any kind, whether express or implied.<br>
+    We do not guarantee that all information in the catalog is accurate, complete, or up-to-date.<br>
+    </p><br><br>
 
     <h3>6. Limitation of Liability</h3>
     <p>
-    We are not liable for any damages, losses, or errors resulting from your use of the app, including lost or corrupted presets, incorrect gear info, or technical issues.
-    </p>
+    We are not liable for any damages, losses, or errors resulting from your use of the app, including lost or corrupted presets, incorrect gear info, or technical issues.<br>
+    </p><br><br>
 
     <h3>7. GDPR Compliance</h3>
     <p>
-    Your use of the app is governed by our Privacy Policy, which explains how we collect, process, and protect your personal data.
-    You may exercise your GDPR rights at any time by contacting us at any time via GitHub.
-    </p>
+    Your use of the app is governed by our Privacy Policy, which explains how we collect, process, and protect your personal data.<br>
+    You may exercise your GDPR rights at any time by contacting us at any time via GitHub.<br>
+    </p><br><br>
 
     <h3>8. Account Termination</h3>
     <p>
-    We may suspend or terminate your account if you violate these Terms.
-    You may delete your account at any time, and all your associated data will be removed permanently.
-    </p>
+    We may suspend or terminate your account if you violate these Terms.<br>
+    You may delete your account at any time, and all your associated data will be removed permanently.<br>
+    </p><br><br>
 
     <h3>9. Changes to Terms</h3>
     <p>
-    We may update these Terms from time to time.
-    Continued use of the app after updates constitutes acceptance of the new Terms.
-    </p>
+    We may update these Terms from time to time.<br>
+    Continued use of the app after updates constitutes acceptance of the new Terms.<br>
+    </p><br><br>
 
     <h3>10. Governing Law</h3>
     <p>
-    These Terms are governed by the laws of Italy.
-    Any disputes arising from these Terms will be subject to the jurisdiction of Italian courts.
-    </p>
+    These Terms are governed by the laws of Italy.<br>
+    Any disputes arising from these Terms will be subject to the jurisdiction of Italian courts.<br>
+    </p><br><br>
 
     <h3>11. Contact Information</h3>
     <p>
-    If you have any questions or concerns regarding these Terms, contact us via GitHub
-    </p>
+    If you have any questions or concerns regarding these Terms, contact us via GitHub.<br>
+    </p><br><br>
 
   </div>
 
