--- a/terms.html
+++ b/terms.html
@@ -9,16 +9,18 @@
 </head>
 <body>
 
-  <div style="margin-top:80px; margin-left: auto; margin-right: auto; text-align: center;">
-    <h1>Terms & Conditions</h1>
-    <p>Effective date: Sept. 29, 2025</p><br>
-    <p>
+<main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
+    <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
+    <h1 style="font-size:1.5rem; font-weight:700;">Terms & Conditions</h1>
+
+    <p><b>Effective date: Sept. 29, 2025</b></p><br>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Welcome to PedalPlex! Please read these Terms & Conditions carefully before using the app.<br>
     By using our services, you agree to these terms.
     </p><br><br>
 
     <h3>1. Your Account</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     To use our app fully, you may need to create an account.<br>
     You are responsible for keeping your login credentials safe and secure.<br>
     You agree to provide accurate, current, and complete information when creating your account.<br>
@@ -26,14 +28,14 @@
     </p><br><br>
 
     <h3>2. User Content</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     You retain ownership of any content you create within the app, including pedalboards, presets, and related data.<br>
     By creating or uploading content, you grant PedalPlex a non-exclusive, worldwide, royalty-free license to store, display, and use your content in the app.<br>
     You agree not to upload content that is illegal, offensive, infringes third-party rights, or violates these Terms.<br>
     </p><br><br>
 
     <h3>3. Third-Party Brands & Catalog</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Our catalog includes gear from third-party brands such as Boss, Marshall, TC Electronic, Electro-Harmonix, Ibanez, and others.<br>
     All trademarks, product names, and images are property of their respective owners.<br>
     PedalPlex is not affiliated with, endorsed, or sponsored by these brands.<br>
@@ -41,7 +43,7 @@
     </p><br><br>
 
     <h3>4. Prohibited Conduct</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     You may not:<br>
     Reverse-engineer, copy, or distribute the app or its catalog.<br>
     Sell, resell, or commercialize any content from the app without permission.<br>
@@ -50,18 +52,18 @@
     </p><br><br>
 
     <h3>5. Disclaimers</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     The app and its catalog are provided “as is” without warranties of any kind, whether express or implied.<br>
     We do not guarantee that all information in the catalog is accurate, complete, or up-to-date.<br>
     </p><br><br>
 
     <h3>6. Limitation of Liability</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We are not liable for any damages, losses, or errors resulting from your use of the app, including lost or corrupted presets, incorrect gear info, or technical issues.<br>
     </p><br><br>
 
     <h3>7. GDPR Compliance</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Your use of the app is governed by our Privacy Policy, which explains how we collect, process, and protect your personal data.<br>
     You may exercise your GDPR rights at any time by contacting us at any time via GitHub.<br>
     </p><br><br>
@@ -73,23 +75,23 @@
     </p><br><br>
 
     <h3>9. Changes to Terms</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We may update these Terms from time to time.<br>
     Continued use of the app after updates constitutes acceptance of the new Terms.<br>
     </p><br><br>
 
     <h3>10. Governing Law</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     These Terms are governed by the laws of Italy.<br>
     Any disputes arising from these Terms will be subject to the jurisdiction of Italian courts.<br>
     </p><br><br>
 
     <h3>11. Contact Information</h3>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     If you have any questions or concerns regarding these Terms, contact us via GitHub.<br>
     </p><br><br>
 
-  </div>
+</main>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
