--- a/create.html
+++ b/create.html
@@ -60,6 +60,10 @@
         .controls-row .control {
         flex-shrink: 0;
         }
+
+        .askpub-swal-style{
+            font-weight: 200;
+        }
     </style>
 
 </head>
@@ -714,14 +718,12 @@ $(function() {
 
   // Ask publication button
   if (userRole !== "admin" && !$("#request-publication").length) {
-    $("#status-buttons").append(`
-      <button class="bx--btn bx--btn--sm bx--btn--primary" id="request-publication">
-        <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="white" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-          <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        Ask publication
-      </button>
-    `);
+    $("#status-buttons").append(`<button id="request-publication" class="bx--btn bx--btn--primary bx--btn--sm" type="button" aria-label="Create New Gear" style="display: flex; align-items: center; gap: 0.5rem;">
+          <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+            <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z"/>
+          </svg>
+          Ask publication
+        </button>`);
 
     // SweetAlert2 confirmation
     $("#request-publication").on("click", function() {
@@ -733,8 +735,8 @@ $(function() {
         cancelButtonText: 'Cancel',
         showCancelButton: true,
         customClass: {
-            confirmButton: 'bx--btn bx--btn--primary',
-            cancelButton: 'bx--btn bx--btn--secondary'
+            confirmButton: 'bx--btn bx--btn--primary askpub-swal-style',
+            cancelButton: 'bx--btn bx--btn--secondary askpub-swal-style'
         }
       }).then((result) => {
         if (result.isConfirmed) {
@@ -745,7 +747,7 @@ $(function() {
           Swal.fire({
             title: 'Done!',
             text: 'Click Save to finalize your submission.',
-            timer: 2000,
+            timer: 1000,
             showConfirmButton: false
           });
         }
