--- a/privacy.html
+++ b/privacy.html
@@ -9,23 +9,24 @@
 </head>
 <body>
 
-  <div style="margin-top:80px; margin-left: auto; margin-right: auto; text-align: center;">
-    <h1>Privacy Policy</h1>
+  <main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
+    <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
+    <h1 style="font-size:2.25rem; font-weight:700;">Privacy Policy</h1>
     <p><b>Effective date: Sept. 29, 2025</b></p><br>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Welcome to PedalPlex! Protecting your privacy is very important to us.<br>
     This Privacy Policy explains in detail what personal data we collect, how we use it, the legal grounds for processing under the General Data Protection Regulation (GDPR), your rights, and how you can contact us.<br>
     By using our web app, you are agreeing to the practices described in this policy.<br>
     </p><br><br>
 
-    <h3>1. Data Controller</h3>
-    <p>
+    <h4>1. Data Controller</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     PedalPlex is the controller of your personal data.<br>
     Contact information: You can contact us at any time regarding your personal data, questions about privacy, or requests to exercise your rights via GitHub<br>
     </p><br><br>
 
-    <h3>2. Types of Data We Collect</h3>
-    <p>
+    <h4>2. Types of Data We Collect</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We collect the following types of data from our users:<br>
     - Account Information:<br>
     When you sign up, we may ask for your email, username, and password to create and maintain your account.<br>
@@ -37,8 +38,8 @@
     Data collected through cookies or similar technologies to help us understand how users interact with the app, optimize functionality, and improve the user experience.<br>
     </p><br><br>
 
-    <h3>3. How We Use Your Data</h3>
-    <p>
+    <h4>3. How We Use Your Data</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Your personal data is used for the following purposes:<br>
     - To provide and maintain our service:<br>
     Saving your pedalboards, presets, and other user content.<br>
@@ -51,49 +52,70 @@
     Responding to lawful requests or preventing potential illegal activities.<br>
     </p><br><br>
 
-    <h3>4. Legal Basis for Processing (GDPR)</h3>
-    <p>
+    <h4>4. Legal Basis for Processing (GDPR)</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We process your data under the following legal grounds:<br>
     Performance of a contract: To provide the services you requested (Art. 6(1)(b) GDPR).<br>
     Consent: When you voluntarily agree to receive newsletters or other communications (Art. 6(1)(a) GDPR).<br>
     Legitimate interest: To improve our services, detect technical issues, and maintain app security (Art. 6(1)(f) GDPR).<br>
     </p><br><br>
     
-    <h3>5. Sharing Your Data</h3>
-    <p>
+    <h4>5. Sharing Your Data</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We do not sell or rent your personal data. However, we may share data in the following situations:
     With service providers: Third-party companies assisting with hosting, analytics, or email communications. These partners are contractually bound to keep your data secure and only use it to provide services for us.
     Legal obligations: When required to comply with law or protect our rights, property, or safety.
     </p><br><br>
 
-    <h3>6. Third-Party Brand Disclaimers</h3>
-    <p>
+    <h4>6. Third-Party Brand Disclaimers</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     Our app includes a catalog of guitar and bass gear, including pedals, amplifiers, and other accessories. Many of these products are trademarks or intellectual property of third-party brands such as Boss, Marshall, TC Electronic, Electro-Harmonix, Ibanez, and others.<br>
     We are not affiliated with, endorsed by, or sponsored by these brands.<br>
     All brand names, product names, and images are used for identification and reference purposes only.<br>
     Users may not use these brand names or images for commercial purposes without proper authorization.<br>
     </p><br><br>
 
-    <h3>7. Data Retention</h3>
-    <p>
+    <h4>7. Data Retention</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We store your account information and content only for as long as your account exists.<br>
     If you choose to delete your account, all your associated data, including pedalboards and presets, will be permanently deleted.<br>
     </p><br><br>
 
-    <h3>8. Your GDPR Rights</h3>
-    <p>
-    Under the GDPR, you have the following rights:
-    Access: Request a copy of your personal data.
-    Rectification: Correct inaccurate or incomplete data.
-    Erasure: Request deletion of your data (“right to be forgotten”).
-    Restriction of processing: Limit how your data is used.
-    Data portability: Receive your data in a structured, machine-readable format.
-    Objection: Object to certain types of processing.
-    Withdrawal of consent: Withdraw any consent you have given.
-    To exercise any of these rights, contact us at [Insert Email]. We will respond promptly in accordance with GDPR requirements.
+    <h4>8. Your GDPR Rights</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
+    Under the GDPR, you have the following rights:<br>
+    - Access: Request a copy of your personal data.<br>
+    - Rectification: Correct inaccurate or incomplete data.<br>
+    - Erasure: Request deletion of your data (“right to be forgotten”).<br>
+    - Restriction of processing: Limit how your data is used.<br>
+    - Data portability: Receive your data in a structured, machine-readable format.<br>
+    - Objection: Object to certain types of processing.<br>
+    - Withdrawal of consent: Withdraw any consent you have given.<br>
+    To exercise any of these rights, contact us at [Insert Email]. We will respond promptly in accordance with GDPR requirements.<br>
     </p><br><br>
 
-  </div>
+    <h4>9. Security Measures</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
+    We implement reasonable technical and organizational measures to protect your data from unauthorized access, disclosure, alteration, or destruction. You are responsible for keeping your login credentials secure.<br>
+    </p><br><br>
+
+    <h4>10. Cookies</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
+    We use cookies and similar technologies to provide essential functionality, analyze usage, and improve your experience. You can manage or disable cookies in your browser settings, but some features of the app may not function properly if cookies are disabled.<br>
+    </p><br><br>
+
+    <h4>11. Changes to This Policy</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
+    We may update this Privacy Policy periodically to reflect changes in the law, technology, or our practices.<br>
+    Your continued use of the app after such updates constitutes acceptance of the revised policy.</br>
+    </p><br><br>
+
+    <h4>12. Contact Information</h4>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
+    If you have any questions or concerns regarding these Terms, contact us via GitHub.<br>
+    </p><br><br>
+
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
