--- a/terms.html
+++ b/terms.html
@@ -69,7 +69,7 @@
     </p><br><br>
 
     <h4>8. Account Termination</h4>
-    <p>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We may suspend or terminate your account if you violate these Terms.<br>
     You may delete your account at any time, and all your associated data will be removed permanently.<br>
     </p><br><br>
