--- a/privacy.html
+++ b/privacy.html
@@ -28,14 +28,10 @@
     <h4>2. Types of Data We Collect</h4>
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     We collect the following types of data from our users:<br>
-    - Account Information:<br>
-    When you sign up, we may ask for your email, username, and password to create and maintain your account.<br>
-    - User Content:<br>
-    Pedalboards, presets, and any other content you create within the app. This content is stored so you can recall, share, and manage your creations.<br>
-    - Usage Data:<br>
-    Information about how you interact with the app, including your device type, operating system, browser type, IP address, session times, and navigation within the app.<br>
-    - Cookies and Analytics Data:<br>
-    Data collected through cookies or similar technologies to help us understand how users interact with the app, optimize functionality, and improve the user experience.<br>
+    - Account Information: when you sign up, we may ask for your email, username, and password to create and maintain your account.<br>
+    - User Content: pedalboards, presets, and any other content you create within the app. This content is stored so you can recall, share, and manage your creations.<br>
+    - Usage Data: information about how you interact with the app, including your device type, operating system, browser type, IP address, session times, and navigation within the app.<br>
+    - Cookies and Analytics Data: data collected through cookies or similar technologies to help us understand how users interact with the app, optimize functionality, and improve the user experience.<br>
     </p><br><br>
 
     <h4>3. How We Use Your Data</h4>
@@ -91,7 +87,7 @@
     - Data portability: Receive your data in a structured, machine-readable format.<br>
     - Objection: Object to certain types of processing.<br>
     - Withdrawal of consent: Withdraw any consent you have given.<br>
-    To exercise any of these rights, contact us at [Insert Email]. We will respond promptly in accordance with GDPR requirements.<br>
+    To exercise any of these rights, contact us via GitHub. We will respond promptly in accordance with GDPR requirements.<br>
     </p><br><br>
 
     <h4>9. Security Measures</h4>
