--- a/preset.html
+++ b/preset.html
@@ -104,7 +104,7 @@
 
 
     <div class="zoom-controls">
-      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary bx--btn--sm" type="button">Go to Pedalboards
+      <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary bx--btn--sm" type="button">Manage Pedalboard
         <svg
           focusable="false"
           preserveAspectRatio="xMidYMid meet"
@@ -115,10 +115,7 @@
           viewBox="0 0 32 32"
           aria-hidden="true"
           class="bx--btn__icon">
-          <g transform="rotate(90 16 16)">
-              <path d="M28 24L24 24 24 20 22 20 22 24 18 24 18 26 22 26 22 30 24 30 24 26 28 26 28 24z"></path>
-              <path d="M10,28V10H22v7h2V6a2.0023,2.0023,0,0,0-2-2H10A2.002,2.002,0,0,0,8,6V28a2.0023,2.0023,0,0,0,2,2h6l0-2ZM10,6H22l0,2H10Z"></path>
-            </g>        
+              <path d="M3,10V22a2.002,2.002,0,0,0,2,2H27a2.0023,2.0023,0,0,0,2-2V10a2.0027,2.0027,0,0,0-2-2H5A2.0023,2.0023,0,0,0,3,10Zm2,0,2,0V22H5ZM27,22H9V10H27Z"></path>     
           </svg>   
       </a>   
       <button class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
