--- a/pedalboard.html
+++ b/pedalboard.html
@@ -162,16 +162,62 @@
       headers: {
         'Authorization': 'Bearer ' + token
       },
+      // success: function(userFromServer) {
+      //   $('#loadingMessage').hide();
+      //   $('#page-content').show();
+
+      //   window.currentUser = userFromServer;
+
+      //   if (typeof initNavPedalboard === 'function') initNavPedalboard(userFromServer.role);
+      //   if (typeof initPedalboard === 'function') initPedalboard(userFromServer.role);
+
+      // },
       success: function(userFromServer) {
         $('#loadingMessage').hide();
         $('#page-content').show();
-
         window.currentUser = userFromServer;
 
+        // 1. Check for guest pedalboards in localStorage
+        const guestBoards = localStorage.getItem("guestPedalboards");
+        if (guestBoards) {
+          const parsed = JSON.parse(guestBoards);
+          if (parsed.length > 0) {
+            Swal.fire({
+              title: "Import Guest Pedalboards?",
+              text: "We found pedalboards you created as a guest. Do you want to import them into your account?",
+              icon: "question",
+              showCancelButton: true,
+              confirmButtonText: "Yes, import",
+              cancelButtonText: "No, discard"
+            }).then((result) => {
+              if (result.isConfirmed) {
+                // Import sequentially
+                const promises = parsed.map(b => importGuestPedalboard(b, userFromServer.id));
+                Promise.all(promises)
+                  .then(() => {
+                    localStorage.removeItem("guestPedalboards");
+                    Swal.fire("Imported!", "Your guest pedalboards are now in your account.", "success")
+                      .then(() => {
+                        if (typeof initNavPedalboard === 'function') initNavPedalboard(userFromServer.role);
+                        if (typeof initPedalboard === 'function') initPedalboard(userFromServer.role);
+                      });
+                  })
+                  .catch(err => {
+                    Swal.fire("Error", "Some guest pedalboards could not be imported.", "error");
+                  });
+              } else {
+                localStorage.removeItem("guestPedalboards"); // discard
+              }
+            });
+            return;
+          }
+        }
+
+        // 2. Normal initialization if no guest boards
         if (typeof initNavPedalboard === 'function') initNavPedalboard(userFromServer.role);
         if (typeof initPedalboard === 'function') initPedalboard(userFromServer.role);
-
       },
+
       error: function(xhr) {
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
