test msg guest pedalboard

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -144,6 +144,7 @@
       // Guest mode
       $('#loadingMessage').hide();
       $('#page-content').show();
+      $('#pedalboard-controls').append("<br>Login to organise your Presets in folders and save them!");
 
       $('#zoomIn, #zoomOut, #zoomReset').prop('disabled', true).addClass('btn-disabled');
 
