--- a/pedalboard.html
+++ b/pedalboard.html
@@ -144,7 +144,7 @@
       // Guest mode
       $('#loadingMessage').hide();
       $('#page-content').show();
-      $('#pedalboard-controls').append("<br>Login to organise your Presets in folders and save them!");
+      $('#pedalboard-controls').append("<br>Login to consistently save your Pedalboards!");
 
       $('#zoomIn, #zoomOut, #zoomReset').prop('disabled', true).addClass('btn-disabled');
 
