test single guest pedalboard

--- a/preset.html
+++ b/preset.html
@@ -175,7 +175,7 @@
       $('#loadingMessage').hide();
       $('#page-content').show();        // show the page
       $('#preset-controls').show()     // show controls
-      $('#preset-controls').html("Login to organise your Presets in folders and save them!");
+      $('#preset-controls').html("<p>Login to organise your Presets in folders and save them!</p>");
       if (typeof initNavPreset === 'function') initNavPreset();
       if (typeof initPreset === 'function') initPreset();
 
