--- a/pedalboard.html
+++ b/pedalboard.html
@@ -145,6 +145,8 @@
       $('#loadingMessage').hide();
       $('#page-content').show();
       $('#pedalboard-controls').append("<p>Login to consistently save your Pedalboards!</p>");
+      $('#pedalboardSelect').hide();
+      $('#renameBoardBtn').hide();
 
       $('#zoomIn, #zoomOut, #zoomReset').prop('disabled', true).addClass('btn-disabled');
 
