--- a/profile.html
+++ b/profile.html
@@ -106,10 +106,15 @@
     $('#changePasswordForm').submit(function (e) {
       e.preventDefault();
 
+      const token = localStorage.getItem('authToken');
+
       $.ajax({
         url: 'https://www.cineteatrosanluigi.it/plex/USER_CHANGE_PASSWORD.php',
         type: 'POST',
         contentType: 'application/json',
+        headers: {
+          'Authorization': 'Bearer ' + token
+        },
         dataType: 'json',
         xhrFields: {
           withCredentials: true
