--- a/terms.html
+++ b/terms.html
@@ -55,6 +55,7 @@
     <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
     The app and its catalog are provided “as is” without warranties of any kind, whether express or implied.<br>
     We do not guarantee that all information in the catalog is accurate, complete, or up-to-date.<br>
+    Each item, configuration or product depicted in this app is purely for educational purposes and may not reflect the actual product or its performance.<br>
     </p><br><br>
 
     <h4>6. Limitation of Liability</h4>
