--- a/login.html
+++ b/login.html
@@ -45,9 +45,9 @@
       <span id="toggleText">Don't have an account? <a href="#" id="toggleForm">Register here</a></span>
     </div>
 
-    <div style="margin-top: 15px;">
+    <!-- <div style="margin-top: 15px;">
       <a href="#" id="forgotPasswordLink">Forgot Password?</a>
-    </div>
+    </div> -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
