--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PedalPlex</title>
+  <!-- Anticipate Carbon Design load -->
+  <link rel="dns-prefetch" href="https://1.www.s81c.com">
+  <link rel="preconnect" href="https://1.www.s81c.com" crossorigin>
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
